# solarcell

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  solarcell.py
examples/: cell_comparison.ipynb  readme.ipynb  readme.md  shading.ipynb  temperature.ipynb
examples/irosa_shading_data/: Calibration-L.csv  Calibration-R.csv  Sunlight-L.csv  Sunlight-R.csv  irosa_webplotdigitizer.tar
solarcell/: __init__.py  solarcell.py
tests/: test_azurspace.py  test_bluebird.py  test_solarcell.py
