[tool.poetry]
name = "solarcell"
version = "0.1.0"
description = "Estimate IV- and PV-curves given photovoltaic cell datasheet parameters."
authors = ["Alexander Osborne <alex@osborneee.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/amosborne/solarcell"
classifiers = ["Topic :: Scientific/Engineering"]
keywords = ["solar", "photovoltaic"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"
matplotlib = "^3.8.2"
jupyter-black = "^0.3.4"
black = {extras = ["jupyter"], version = "^23.12.1"}
pre-commit = "^3.6.0"
isort = "^5.13.2"
flake9 = "^3.8.3.post2"
pytest = "^7.4.3"
shapely = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
